Sync all content

--- a/content/resources/12-307s09.md
+++ b/content/resources/12-307s09.md
@@ -9,7 +9,9 @@ image_metadata:
     on Ekman layers. (Photo by Prof. John Marshall.)
   credit: ''
   image-alt: Photo of an anticyclone from a tank experiment.
+learning_resource_types: []
 resourcetype: Image
 title: Photo of an anticyclone from a tank experiment
+type: OCWImage
 uid: ccde7941-ad74-114d-54bf-6b34292748a3
 ---
