--- a/content/resources/12-307s09-th.md
+++ b/content/resources/12-307s09-th.md
@@ -9,7 +9,9 @@ image_metadata:
     on Ekman layers. (Photo by Prof. John Marshall.)
   credit: ''
   image-alt: Photo of an anticyclone from a tank experiment.
+learning_resource_types: []
 resourcetype: Image
 title: Photo of an anticyclone from a tank experiment
+type: OCWImage
 uid: 3935f478-9bb6-e356-b3c4-6b0d176de21b
 ---
