Sync all content

--- a/content/resources/12-307s09-th.md
+++ b/content/resources/12-307s09-th.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: Photo of an anticyclone from a tank experiment.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Photo of an anticyclone from a tank experiment
 uid: 3935f478-9bb6-e356-b3c4-6b0d176de21b
