--- a/content/resources/12-307s09.md
+++ b/content/resources/12-307s09.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: Photo of an anticyclone from a tank experiment.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Photo of an anticyclone from a tank experiment
 uid: ccde7941-ad74-114d-54bf-6b34292748a3
