Sync all content

--- a/content/resources/12-307s09-th.md
+++ b/content/resources/12-307s09-th.md
@@ -14,4 +14,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: Photo of an anticyclone from a tank experiment
 uid: 3935f478-9bb6-e356-b3c4-6b0d176de21b
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
