--- a/content/resources/12-307s09.md
+++ b/content/resources/12-307s09.md
@@ -14,4 +14,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: Photo of an anticyclone from a tank experiment
 uid: ccde7941-ad74-114d-54bf-6b34292748a3
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
